--- a/composer.json
+++ b/composer.json
@@ -6,15 +6,16 @@
     "license": "MIT",
     "require": {
         "php": ">=5.4.16",
-        "cakephp/cakephp": "~3.0.1",
-        "mobiledetect/mobiledetectlib": "2.*",
-        "cakephp/migrations": "~1.0",
-        "cakephp/plugin-installer": "*"
+        "cakephp/cakephp": "3.1",
+        "mobiledetect/mobiledetectlib": "*",
+        "cakephp/migrations": "*",
+        "cakephp/plugin-installer": "*",
+        "pagseguro/php": "@stable"
     },
     "require-dev": {
         "psy/psysh": "@stable",
-        "cakephp/debug_kit": "~3.0",
-        "cakephp/bake": "~1.0",
+        "cakephp/debug_kit": "*",
+        "cakephp/bake": "*",
         "cakedc/search": "* 3.0.x-dev",
         "holt59/cakephp3-bootstrap-helpers": "dev-master"
     },
