Modificações na estrutura do pedido e geração de impressão do pedido.

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "mobiledetect/mobiledetectlib": "*",
         "cakephp/migrations": "*",
         "cakephp/plugin-installer": "*",
-        "pagseguro/php": "@stable"
+        "pagseguro/php": "@stable",
+        "phpsc/pagseguro" : "*"
     },
     "require-dev": {
         "psy/psysh": "@stable",
