--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "license": "MIT",
     "require": {
         "php": ">=5.4.16",
-        "cakephp/cakephp": "3.1",
+        "cakephp/cakephp": "~3.2",
         "mobiledetect/mobiledetectlib": "*",
         "cakephp/migrations": "*",
         "cakephp/plugin-installer": "*"
@@ -15,8 +15,8 @@
         "psy/psysh": "@stable",
         "cakephp/debug_kit": "*",
         "cakephp/bake": "*",
-        "friendsofcake/search": "dev-master",
-        "holt59/cakephp3-bootstrap-helpers": "dev-master"
+        "holt59/cakephp3-bootstrap-helpers": "dev-master",
+        "friendsofcake/search": "1.2.2"
     },
     "suggest": {
         "phpunit/phpunit": "Allows automated tests to be run without system-wide install.",
@@ -24,17 +24,15 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "src",
-            "Blogs\\": "./plugins/Blogs/src",
-            "Configuracoes\\": "./plugins/Configuracoes/src"
+            "App\\": "src"
+
         }
     },
     "autoload-dev": {
         "psr-4": {
             "App\\Test\\": "tests",
-            "Cake\\Test\\": "./vendor/cakephp/cakephp/tests",
-            "Blogs\\Test\\": "./plugins/Blogs/tests",
-            "Configuracoes\\Test\\": "./plugins/Configuracoes/tests"
+            "Cake\\Test\\": "./vendor/cakephp/cakephp/tests"
+
         }
     },
     "scripts": {
